v1.2.0 update UI, optimize, add README